<resources>
    <string name="app_name">Pal Jobs</string>


    <string name="open">open</string>
    <string name="close">close</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_wait">Please Wait</string>

    <string name="stfErrorMessage">An error occurred, please try again</string>
    <string name="stfOfflineMessage">Please check your internet connection</string>
    <string name="stfEmptyMessage">There are no items</string>
    <string name="stfLoadingMessage">Loading..</string>
    <string name="stfButtonText">Try again</string>

    <string name="no_internet">No internet connection</string>
    <string name="empty_field">This field cannot be left blank</string>
    <string name="invalid_email">Please enter the correct email</string>
    <string name="password_not_match">Password does not match</string>
    <string name="password_less_6_char">Password must be 6 characters or greater</string>
    <string name="error">An error occurred, please try again</string>
    <string name="back_exit">Press again to exit.</string>

    <string name="remove_favorite_success">Successfully removed from favourites</string>
    <string name="add_favorite_success">Successfully added to favourites</string>
    <string name="submit_proposal_success">Successfully submit proposal</string>

    <string name="login_successfully">You are logged in successfully</string>
    <string name="no_cv">There is no pdf cv file</string>
    <string name="logout_successfully">Signed out successfully</string>
    <string name="logout">Logout</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sginup">Sign Up</string>
    <string name="restore_password">Restore Password</string>
    <string name="restore">Restore</string>
    <string name="terms">By creating an account you agree to our Terms of Privacy Policy</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_now">Register now</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="create_an_account">Create an Account</string>

    <string name="con_not_create_account">It is not possible to create an account, please make sure that all data is correct</string>
    <string name="con_not_login">Unable to login, please verify that the data is correct</string>
    <string name="account_successfully">New account created successfully</string>
    <string name="checkBox_field">You must agree to the terms and conditions first</string>

    <string name="error_upload_image">The image cannot be uploaded, please verify that the data is correct</string>
    <string name="error_upload_file">The file cannot be uploaded, please verify that the data is correct</string>

    <string name="upload_picture_successfully">Upload Picture Successfully</string>
    <string name="upload_file_successfully">Upload File Successfully</string>

    <string name="profile">Profile</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="home">Jobs</string>
    <string name="explore">Explore</string>
    <string name="save_jobs">Save Jobs</string>
    <string name="submit_jobs">Submitted Jobs</string>
    <string name="search">Search</string>
    <string name="about">About App</string>
    <string name="setting">Setting</string>

    <string name="my_jobs">My Jobs</string>
    <string name="received_jobs">Received Jobs</string>

    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="jobField">Job field</string>
    <string name="jobTitle">Job title</string>
    <string name="edit_cover_photo">Edit cover Photo</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="skills">Skills</string>
    <string name="confirm">Confirm</string>
    <string name="gender">Gender</string>
    <string name="cv">Upload CV PDF File</string>
    <string name="cv_new">Upload new CV File</string>
    <string name="download_cv">download CV PDF File</string>
    <string name="register_as">Choose the registration method</string>
    <string name="employee">Employee</string>
    <string name="company">Company</string>
    <string name="register_type">Register Type</string>
    <string name="submit_your_proposal">Submit Your Proposal</string>
    <string name="submit_proposal">Submit Proposal</string>

    <string name="complete_profile">Complete Your Profile</string>
    <string name="select_skills">Select the skills you have</string>
    <string name="update_profile_successfully">Update Profile Successfully</string>
    <string name="delete_proposal_successfully">Delete Proposal Successfully</string>
    <string name="update_image_file">Edit Image and CV File</string>
    <string name="update">Update</string>
    <string name="must_select_skills">At least one skill must be selected</string>
    <string name="must_select_photo">At least one photo must be selected</string>
    <string name="must_select_file">You must choose a CV file first</string>

    <string name="general">General</string>
    <string name="account">Account</string>
    <string name="privacy">Privacy</string>
    <string name="help">Help</string>
    <string name="jobs">Jobs</string>
    <string name="submitted">Submitted</string>
    <string name="proposal_already__saved">Job has already been saved</string>
    <string name="search_here">search here</string>
    <string name="filters">Filters</string>
    <string name="date_first">Date Added (latest First)</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>

    <string name="edit_proposal">Edit Proposal</string>
    <string name="job_field">Job field</string>
    <string name="search_for_specific_skills">Search for specific skills</string>
    <string name="specific_job">Specific job</string>
    <string name="search_for_job_field">Search for job field</string>
    <string name="your_proposal">Your Proposal</string>
    <string name="write_a_description_about_your_job">Write a description about your job</string>
    <string name="requirements">Requirements</string>
    <string name="set_your_account_as">Set your account as</string>
    <string name="choose_your_skills">Choose your skills</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="resume">Resume</string>
    <string name="enter_job_field">Enter Job Title</string>
    <string name="description">Description</string>
    <string name="add_a_job_requirements">Add a job requirements</string>
    <string name="add_new_job">Add New Job</string>
    <string name="edit_job">Edit Job</string>
    <string name="add_new_job_successfully">Successfully Add New Job</string>
    <string name="update_job_successfully">Successfully Update Job</string>
    <string name="job_details">Job Details</string>
    <string name="show_proposals">Show Proposals</string>
    <string name="our_jobs">Our Jobs</string>
    <string name="jobs_proposals">Jobs Proposals</string>

    <string name="upload_your_resume">Upload Your Resume</string>
    <string name="company_name">Company Name</string>
    <string name="about_paljobs">About PalJobs</string>
    <string name="contact_us">Contact Us</string>
    <string name="edit_account">Edit Account</string>
    <string name="choose_your_field">Choose your field</string>
    <string name="select_photo">Select Your Photo</string>
    <string name="telephone_fax">Telephone/Fax</string>
    <string name="type_about_yourself">Type about yourself</string>
    <string name="type_about_your_company">Type about your company</string>
    <string name="must_select_jobField">The job field must be selected first</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="company_details">Company Details</string>
    <string name="see_proposals">See Proposals</string>


</resources>