<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:title="@string/explore" />
        <item
            android:id="@+id/nav_save"
            android:enabled="true"
            android:icon="@drawable/ic_save"
            android:title="@string/save_jobs" />
        <item
            android:id="@+id/nav_submit"
            android:enabled="true"
            android:icon="@drawable/ic_submit"
            android:title="@string/submit_jobs" />
        <item
            android:id="@+id/nav_search"
            android:enabled="true"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_setting"
            android:enabled="true"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_about"
            android:enabled="true"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />

    </group>

</menu>