<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_out_job"
            android:enabled="true"
            android:icon="@drawable/ic_explore"
            android:title="@string/our_jobs" />

        <item
            android:id="@+id/nav_jobs_proposals"
            android:enabled="true"
            android:icon="@drawable/ic_submit2"
            android:title="@string/jobs_proposals" />

        <item
            android:id="@+id/nav_setting"
            android:enabled="true"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />

        <item
            android:id="@+id/nav_about"
            android:enabled="true"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />

    </group>

</menu>