<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".controller.activities.SettingActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/content_app_bar_back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_primary"
                android:backgroundTint="#F1F9FF"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="20dp"
                android:padding="15dp"
                android:text="@string/account"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableTint="@color/colorAccent" />

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_primary"
                android:backgroundTint="#F1F9FF"
                android:drawableStart="@drawable/ic_submit2"
                android:drawablePadding="20dp"
                android:padding="15dp"
                android:text="@string/privacy"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableTint="@color/colorAccent" />

            <TextView
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_primary"
                android:backgroundTint="#F1F9FF"
                android:drawableStart="@drawable/ic_help"
                android:drawablePadding="20dp"
                android:padding="15dp"
                android:text="@string/help"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableTint="@color/colorAccent" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_primary"
                android:backgroundTint="#F1F9FF"
                android:drawableStart="@drawable/ic_about"
                android:drawablePadding="20dp"
                android:padding="15dp"
                android:text="@string/about"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableTint="@color/colorAccent" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_primary"
                android:backgroundTint="#F1F9FF"
                android:drawableStart="@drawable/ic_logout"
                android:drawablePadding="20dp"
                android:padding="15dp"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableTint="@color/colorAccent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>